# allied_citadels

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DESIGN.md  Cargo.toml  OPTIMIZATION_PLAN.md  README.md  TODOs.md  config.toml  rustfmt.toml
account_context/: Cargo.toml
account_context/src/: account_service.rs  config.rs  error.rs  lib.rs  main.rs  migrations.rs  user_service.rs
axum_demo/: Cargo.toml  README.md
axum_demo/src/: main.rs
common_context/: Cargo.toml
common_context/config/: default_common_config.toml
common_context/src/: constants.rs  database.rs  lib.rs  main.rs  migrations.rs
config/: account_context.toml  postgres_proxy.toml  room_context.toml
img/cards/: 1.png.import  10.png.import  11.png.import  12.png.import  13.png.import  14.png.import  15.png.import  16.png.import  17.png.import  18.png.import  19.png.import  2.png.import  20.png.import  21.png.import  22.png.import  23.png.import  24.png.import  25.png.import  26.png.import  27.png.import  28.png.import  29.png.import  3.png.import  30.png.import  31.png.import  32.png.import  33.png.import  34.png.import  35.png.import  36.png.import  37.png.import  38.png.import  39.png.import  4.png.import  40.png.import  41.png.import  42.png.import  43.png.import  44.png.import  45.png.import  (+8 more)
img/roles/: 1.png.import  2.png.import  3.png.import  4.png.import  5.png.import  6.png.import  7.png.import  8.png.import
img/roles_small/: 1.jpg.import  2.jpg.import  3.jpg.import  4.jpg.import  5.jpg.import  6.jpg.import  (+2 more)
postgres_proxy/: Cargo.toml
redis_cli/: Cargo.toml
room_context/: Cargo.toml
server/: Cargo.toml
server/doc/: naming.md  rule.md
server/src/: abstract_fa_agent.rs  abstract_fyi_agent.rs  bit.rs  config.rs  deck.rs  domain.rs  fa_agents.rs  fyi_agents.rs  game.rs  history.rs  id_gen.rs  lib.rs  log.rs  obs.rs  player.rs  player_indexed_vec.rs  services.rs  ws_dispatcher.rs
server/src/domain/: agent_req_event.rs  agent_resp_event.rs  camp.rs  card.rs  color.rs  destroy_target.rs  magician_skill.rs  oper.rs  option_offset.rs  option_role.rs  player_index.rs  player_offset.rs  player_offset_set.rs  role.rs  role_offset_pair.rs  roleset.rs
server/src/fa_agents/: noop_fa_agent.rs  random_fa_agent.rs  redis_proxy_fa_agent.rs  v2_fa_agent.rs  ws_proxy_fa_agent.rs
server/src/fyi_agents/: noop_fyi_agent.rs
server/src/obs/: building_extra_score.rs  building_info.rs  common_player_info.rs  hero_info.rs  round_info.rs  villain_info.rs
server/src/services/: init_service.rs  role_execution_service.rs  role_selection_service.rs
session_context/: Cargo.toml
session_context/config/: default_session_config.toml
session_context/src/: config.rs  error.rs  jsonrpc.rs  lib.rs  main.rs  server.rs  services.rs  state.rs
session_context/src/cli/: login.rs  mod.rs
session_context/src/cli/room/: create.rs  enter.rs  enter_and_take_random_seat.rs  leave.rs  list.rs  mod.rs
session_context/src/static/: index.html
splitimage/: Cargo.toml
user_context/: Cargo.toml
user_service/: Cargo.toml
user_service/src/: lib.rs  main.rs  person.rs  person_service.rs
(+140 files in other folders)
