[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }
futures-util = "0.3"
