[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3"
futures-util = "0.3.31"
indicatif = "0.18.0"
rand = "0.9.2"
strum = { version = "0.27.2", features = ["derive"] }
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
] }
tokio-tungstenite = "0.28.0"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "json",
    "valuable",
    "fmt",
    "time",
] }
valuable = { version = "0.1.1", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
toml = "0.9.8"
anyhow = "1.0.100"
redis = { version = "0.32.7", features = ["tokio-comp"] }
