[package]
name = "session_context"
version = "0.1.0"
edition = "2024"

[dependencies]
common_context = { path = "../common_context" }
user_context = { path = "../user_context" }
room_context = { path = "../room_context" }
async-trait = "0.1.89"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = { version = "0.9.2", features = ["std_rng"] }
thiserror = "2.0"
toml = "0.9.8"
axum = { version = "0.8.7", features = ["json", "macros", "ws"] }
futures-util = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
